--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -125,13 +125,16 @@
 
 @media (min-width: 768px) {
   .about__gallery {
-    grid-template-columns: repeat(2, minmax(260px, 1fr));
-    grid-auto-rows: 280px;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    align-items: stretch;
   }
 
-  .about__image:first-child {
-    grid-column: span 2;
-    grid-row: span 2;
+  .about__image--feature {
+    grid-column: 1 / -1;
+  }
+
+  .about__image--secondary {
+    aspect-ratio: 3 / 4;
   }
 
   .visit__grid {
@@ -146,10 +149,6 @@
 
   .hero__cta {
     justify-content: flex-start;
-  }
-
-  .about__gallery {
-    grid-auto-rows: 320px;
   }
 
   .menu__grid {
