--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -125,16 +125,13 @@
 
 @media (min-width: 768px) {
   .about__gallery {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-    align-items: stretch;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
-  .about__image--feature {
-    grid-column: 1 / -1;
-  }
-
+  .about__image--feature,
   .about__image--secondary {
-    aspect-ratio: 3 / 4;
+    aspect-ratio: 4 / 3;
+    grid-column: auto;
   }
 
   .visit__grid {
